--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    <link href="/css/styles.css" rel="stylesheet">
-</head>
-<body>
-<h1>Event planning system</h1>
-</body>
-</html>
+<%- include('templates/header') %>
+
+<main class="container mx-auto px-4 py-6">
+    <p class="text-5xl mb-20 font-black">
+        EVENT PLANNING SYSTEM
+    </p>
+    <h2 class="text-2xl font-semibold mb-4">Author</h2>
+    <h3 class="text-xl font-medium mb-2">Ivan Kostin</h3>
+    <h3 class="text-xl font-medium mb-2">ID: 21078541</h3>
+</main>
