Event Types implemented + EJS for it + Fix routes

--- a/views/organizers.ejs
+++ b/views/organizers.ejs
@@ -40,7 +40,7 @@
         e.preventDefault();
 
         const hasEvents = document.getElementById('hasEvents').value;
-        const url = hasEvents ? `${baseURL}/list?hasEvents=${hasEvents}` : `${baseURL}/list`;
+        const url = hasEvents ? `${baseURL}?hasEvents=${hasEvents}` : baseURL;
 
         try {
             const response = await fetch(url);
