--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="flex w-screen h-[60px] bg-pink-400 mb-10 justify-between pl-5 pr-20 items-center">
-        <h1 class="text-5xl font-black italic text-white">EPS</h1>
+        <a href="/" class="text-5xl font-black italic text-white">EPS</a>
         <nav>
             <ul class="flex flex-row gap-6 underline text-white text-md font-black">
                 <li><a href="/">Home</a></li>
