EventController almost done + Corrected Routes + Small fixes

--- a/views/event-types.ejs
+++ b/views/event-types.ejs
@@ -86,7 +86,7 @@
         const id = document.getElementById('eventTypeId').value;
 
         try {
-            const response = await fetch(`${baseURL}/delete?id=${id}`, {
+            const response = await fetch(`${baseURL}/delete/${id}`, {
                 method: 'DELETE'
             });
 
