--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,5 @@
     </p>
     <h2 class="text-2xl font-semibold mb-4">Author</h2>
     <h3 class="text-xl font-medium mb-2">Ivan Kostin</h3>
-    <h3 class="text-xl font-medium mb-2">ID: 21078541</h3>
+    <h3 class="text-xl font-medium mb-2 p-2">ID: 21078541</h3>
 </main>
